--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "next": ">=14.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
-    "@supabase/supabase-js": ">=2.44.0",
-    "@uidotdev/usehooks": ">=2.4.0"
+    "@supabase/supabase-js": ">=2.44.0"
   }
 }
