--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "nodemon": "^3.1.7",
     "react": "file:../daveyplate/node_modules/react",
     "swr": "file:../daveyplate/node_modules/swr",
+    "@nextui-org/react": "file:../daveyplate/node_modules/@nextui-org/react/dist",
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
     "@iconify/react": ">=5.0.0",
-    "@nextui-org/react": ">=2.4.8",
+    "@nextui-org/react": ">=2.4.0",
     "next": ">=14.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
