--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "babel src --out-dir dist && npx tsc",
-    "dev": "nodemon --watch src --exec 'npm run build'",
-    "prepublishOnly": "npm run build"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "prepublishOnly": "rm -rf dist && npm run build"
   },
   "keywords": [
     "supabase",
@@ -26,23 +26,19 @@
   "author": "daveycodez",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.25.7",
-    "@babel/core": "^7.25.7",
-    "@babel/preset-env": "^7.25.7",
-    "@babel/preset-react": "^7.25.7",
-    "@types/react": "^18.3.12",
-    "nodemon": "^3.1.7",
+    "@types/react": "^19.0.1",
+    "typescript": "^5.6.2",
     "react": "file:../daveyplate/node_modules/react",
-    "swr": "file:../daveyplate/node_modules/swr",
-    "@nextui-org/react": "file:../daveyplate/node_modules/@nextui-org/react/dist",
-    "typescript": "^5.6.2"
+    "react-dom": "file:../daveyplate/node_modules/react-dom",
+    "@nextui-org/react": "file:../daveyplate/node_modules/@nextui-org/react/dist"
   },
   "peerDependencies": {
     "@iconify/react": ">=5.0.0",
-    "@nextui-org/react": ">=2.4.0",
-    "next": ">=14.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
-    "@supabase/supabase-js": ">=2.44.0"
+    "@nextui-org/react": ">=2.6.0",
+    "@supabase/supabase-js": ">=2.44.0",
+    "@emotion/is-prop-valid": ">=1.3.1",
+    "next": ">=14.0.0"
   }
 }
